design header and footer

--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,1 +1,52 @@
-<p>bio works!</p>
+<app-header></app-header>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1>Hello, I'm Favour</h1>
+    </div>
+    <div class="col-12">
+      <p>
+        I'm a Front End Developer based in Port Harcourt, Nigeria. I am
+        passionate on building applications that works on the web.
+      </p>
+      <p class="mt-3">
+        Techincal Writer is another area of my interest and I'm also interested
+        in community buiding. When I am not doing software related activities,
+        you find me practicing a new dance step(basically I dance for fun).
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h1>Hello, I'm Favour</h1>
+    </div>
+    <div class="col-12">
+      <p>
+        I'm a Front End Developer based in Port Harcourt, Nigeria. I am
+        passionate on building applications that works on the web.
+      </p>
+      <p class="mt-3">
+        Techincal Writer is another area of my interest and I'm also interested
+        in community buiding. When I am not doing software related activities,
+        you find me practicing a new dance step(basically I dance for fun).
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h1>Hello, I'm Favour</h1>
+    </div>
+    <div class="col-12">
+      <p>
+        I'm a Front End Developer based in Port Harcourt, Nigeria. I am
+        passionate on building applications that works on the web.
+      </p>
+      <p class="mt-3">
+        Techincal Writer is another area of my interest and I'm also interested
+        in community buiding. When I am not doing software related activities,
+        you find me practicing a new dance step(basically I dance for fun).
+      </p>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
