--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -7,45 +7,206 @@
     <div class="col-12">
       <p>
         I'm a Front End Developer based in Port Harcourt, Nigeria. I am
-        passionate on building applications that works on the web.
+        passionate on building applications that runs on the web.
       </p>
       <p class="mt-3">
         Techincal Writer is another area of my interest and I'm also interested
         in community buiding. When I am not doing software related activities,
-        you find me practicing a new dance step(basically I dance for fun).
+        you will find me practicing a new dance step(basically I dance for fun).
       </p>
     </div>
   </div>
+
+  <!-- thought -->
   <div class="row">
     <div class="col-12">
-      <h1>Hello, I'm Favour</h1>
-    </div>
-    <div class="col-12">
-      <p>
-        I'm a Front End Developer based in Port Harcourt, Nigeria. I am
-        passionate on building applications that works on the web.
+      <h1>Thought</h1>
+      <p class="mb-3">
+        My technical wirting is about software development and you can find them
+        below:
       </p>
-      <p class="mt-3">
-        Techincal Writer is another area of my interest and I'm also interested
-        in community buiding. When I am not doing software related activities,
-        you find me practicing a new dance step(basically I dance for fun).
-      </p>
+      <div class="row mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <a
+            target="_blank"
+            href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
+            >Uploading an Image to Firebase Cloud Storage with Angular
+          </a>
+          <p class="mt-3 date">Feb 17, 2020</p>
+          <p>
+            In this tutorial, we are going to learn how to upload an image to
+            Firebase Cloud Storage from an Angular Project. We’ll be using
+            AngularFire library for setting up Firebase in the Angular web
+            application. <br />
+            Firebase is Google's mobile platform that helps you quickly develop
+            high-quality apps and grow your business.
+          </p>
+          <div>
+            <button><a routerLink="/thought">View More</a></button>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <a
+            target="_blank"
+            href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
+            >Uploading an Image to Firebase Cloud Storage with Angular
+          </a>
+          <p class="mt-3 date">Feb 17, 2020</p>
+          <p>
+            In this tutorial, we are going to learn how to upload an image to
+            Firebase Cloud Storage from an Angular Project. We’ll be using
+            AngularFire library for setting up Firebase in the Angular web
+            application. <br />
+            Firebase is Google's mobile platform that helps you quickly develop
+            high-quality apps and grow your business.
+          </p>
+          <div>
+            <button><a routerLink="/thought">View More</a></button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <!-- portfolio -->
   <div class="row">
     <div class="col-12">
-      <h1>Hello, I'm Favour</h1>
+      <h1>portfolio</h1>
+      <div class="row mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+          <div class="card" style="width: 33rem; height: 45vh">
+            <img
+              src="../../assets/Screenshot (71).png"
+              alt=""
+              width="100%"
+              height="86%"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="" target="_blank">View</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+          <div class="card" style="width: 33rem; height: 45vh">
+            <img
+              src="../../assets/Screenshot (72).png"
+              alt=""
+              width="100%"
+              height="86%"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="" target="_blank">View</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mt-5">
+          <div class="card" style="width: 33rem; height: 45vh">
+            <img
+              src="../../assets/Screenshot (73).png"
+              alt=""
+              width="100%"
+              height="86%"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="" target="_blank">View</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <!-- experience -->
+  <div class="row">
     <div class="col-12">
+      <h1>Experience</h1>
+      <div class="row">
+        <div class="col-lg-12 col-md-6 col-sm-12">
+          <h4>PrimedSoft - <span>Front End Developer</span></h4>
+          <span class="mb-3">January 2019 - December 2019</span>
+          <div class="mt-2">
+            <ol>
+              <li>Reponsible for building user interface</li>
+              <li>Implementing APIs</li>
+              <li>
+                Built a full project of a client
+                <a target="_blank" href="">View</a>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- contact -->
+  <div class="row">
+    <div class="col-12">
+      <h1>Contact</h1>
       <p>
-        I'm a Front End Developer based in Port Harcourt, Nigeria. I am
-        passionate on building applications that works on the web.
+        Have a project you would like me to work on, Dm me using the form below.
       </p>
-      <p class="mt-3">
-        Techincal Writer is another area of my interest and I'm also interested
-        in community buiding. When I am not doing software related activities,
-        you find me practicing a new dance step(basically I dance for fun).
-      </p>
+      <div class="row">
+        <div class="col-lg-12 col-md-6 col-sm-12">
+          <form class="border border-light">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <input
+                  type="text"
+                  class="form-control mb-4 "
+                  placeholder="Full Name"
+                />
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <input
+                  type="email"
+                  id="defaultLoginFormEmail"
+                  class="form-control mb-4 "
+                  placeholder="E-mail"
+                />
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <input
+                  type="number"
+                  id="defaultLoginFormNumber"
+                  class="form-control mb-4 "
+                  placeholder="Number"
+                />
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <select class="form-control mb-4" name="" id="">
+                  <option value="choose"></option>
+                  <option value="Tech">Techincal Writing</option>
+                  <option value="web">Web Development</option>
+                </select>
+              </div>
+            </div>
+
+            <textarea
+              name=""
+              class="col-12"
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Give a brief description of the project"
+            ></textarea>
+
+            <!-- Sign in button -->
+            <button class="my-4" type="submit">
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
