--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -83,7 +83,9 @@
             />
             <div class="card-body">
               <p class="card-text">
-                <a href="" target="_blank">View</a>
+                <a href="https://fayvik.github.io/blogpost/" target="_blank"
+                  >View</a
+                >
               </p>
             </div>
           </div>
@@ -98,7 +100,9 @@
             />
             <div class="card-body">
               <p class="card-text">
-                <a href="" target="_blank">View</a>
+                <a href="https://qtalk-4dd0f.firebaseapp.com" target="_blank"
+                  >View</a
+                >
               </p>
             </div>
           </div>
@@ -113,7 +117,9 @@
             />
             <div class="card-body">
               <p class="card-text">
-                <a href="" target="_blank">View</a>
+                <a href="https://freepik-99146.firebaseapp.com" target="_blank"
+                  >View</a
+                >
               </p>
             </div>
           </div>
@@ -136,7 +142,9 @@
               <li>Implementing APIs</li>
               <li>
                 Built a full project of a client
-                <a target="_blank" href="">View</a>
+                <a target="_blank" href="https://qtalk-4dd0f.firebaseapp.com"
+                  >View</a
+                >
               </li>
             </ol>
           </div>
