--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container pl-5 pr-5">
   <div class="row">
     <div class="col-12">
       <h1>Hello, I'm Favour</h1>
@@ -72,14 +72,14 @@
   <div class="row">
     <div class="col-12">
       <h1>portfolio</h1>
-      <div class="row mt-3">
-        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+      <div class="row mt-3 justify-content-between align-items-center">
+        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
           <div class="card" style="width: 33rem; height: 45vh">
             <img
               src="../../assets/Screenshot (71).png"
               alt=""
               width="100%"
-              height="86%"
+              height="80%"
             />
             <div class="card-body">
               <p class="card-text">
@@ -90,13 +90,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
           <div class="card" style="width: 33rem; height: 45vh">
             <img
               src="../../assets/Screenshot (72).png"
               alt=""
               width="100%"
-              height="86%"
+              height="80%"
             />
             <div class="card-body">
               <p class="card-text">
@@ -107,13 +107,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 mt-5">
+        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
           <div class="card" style="width: 33rem; height: 45vh">
             <img
               src="../../assets/Screenshot (73).png"
               alt=""
               width="100%"
-              height="86%"
+              height="80%"
             />
             <div class="card-body">
               <p class="card-text">
@@ -201,13 +201,13 @@
 
             <textarea
               name=""
-              class="col-12"
+              class="col-lg-6 col-md-6 col-sm-12"
               id=""
               cols="30"
               rows="10"
               placeholder="Give a brief description of the project"
             ></textarea>
-
+            <br />
             <!-- Sign in button -->
             <button class="my-4" type="submit">
               Submit
