--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container pl-5 pr-5">
+<div class="container">
   <div class="row">
     <div class="col-12">
       <h1>Hello, I'm Favour</h1>
@@ -72,9 +72,9 @@
   <div class="row">
     <div class="col-12">
       <h1>portfolio</h1>
-      <div class="row mt-3 justify-content-between align-items-center">
-        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
-          <div class="card" style="width: 33rem; height: 45vh">
+      <div class="row mt-3 align-items-center">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
             <img
               src="../../assets/Screenshot (71).png"
               alt=""
@@ -90,8 +90,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
-          <div class="card" style="width: 33rem; height: 45vh">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
             <img
               src="../../assets/Screenshot (72).png"
               alt=""
@@ -107,8 +107,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 mb-5">
-          <div class="card" style="width: 33rem; height: 45vh">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
             <img
               src="../../assets/Screenshot (73).png"
               alt=""
@@ -161,17 +161,17 @@
         Have a project you would like me to work on, Dm me using the form below.
       </p>
       <div class="row">
-        <div class="col-lg-12 col-md-6 col-sm-12">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <form class="border border-light">
             <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="col-lg-5 col-md-5 col-sm-12">
                 <input
                   type="text"
                   class="form-control mb-4 "
                   placeholder="Full Name"
                 />
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="col-lg-5 col-md-5 col-sm-12">
                 <input
                   type="email"
                   id="defaultLoginFormEmail"
@@ -182,7 +182,7 @@
             </div>
 
             <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="col-lg-5 col-md-5 col-sm-12">
                 <input
                   type="number"
                   id="defaultLoginFormNumber"
@@ -190,7 +190,7 @@
                   placeholder="Number"
                 />
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="col-lg-5 col-md-5 col-sm-12">
                 <select class="form-control mb-4" name="" id="">
                   <option value="choose"></option>
                   <option value="Tech">Techincal Writing</option>
