make some ajustment on ui

--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -26,7 +26,7 @@
         below:
       </p>
       <div class="row mt-3">
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
           <a
             target="_blank"
             href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
@@ -45,11 +45,11 @@
             <button><a routerLink="/thought">View More</a></button>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
           <a
             target="_blank"
-            href="https://dev.to/favouremma18/uploading-an-image-to-firebase-cloud-storage-with-angular-2aeh"
-            >Uploading an Image to Firebase Cloud Storage with Angular
+            href="https://dev.to/favouremma18/how-to-build-an-auto-search-input-using-google-book-api-with-an-angular-project-233j-temp-slug-1648002"
+            >Building a Book Finder App using Google Book API
           </a>
           <p class="mt-3 date">Feb 17, 2020</p>
           <p>
@@ -78,7 +78,7 @@
             <img
               src="../../assets/Screenshot (71).png"
               alt=""
-              width="100%"
+              width=""
               height="80%"
             />
             <div class="card-body">
@@ -95,7 +95,7 @@
             <img
               src="../../assets/Screenshot (72).png"
               alt=""
-              width="100%"
+              width=""
               height="80%"
             />
             <div class="card-body">
@@ -112,12 +112,29 @@
             <img
               src="../../assets/Screenshot (73).png"
               alt=""
-              width="100%"
+              width=""
               height="80%"
             />
             <div class="card-body">
               <p class="card-text">
                 <a href="https://freepik-99146.firebaseapp.com" target="_blank"
+                  >View</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+          <div class="card" style="height: 45vh">
+            <img
+              src="../../assets/Screenshot (88).png"
+              alt=""
+              width=""
+              height="80%"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="https://bookapp-264711.firebaseapp.com" target="_blank"
                   >View</a
                 >
               </p>
@@ -164,14 +181,14 @@
         <div class="col-lg-12 col-md-12 col-sm-12">
           <form class="border border-light">
             <div class="row">
-              <div class="col-lg-5 col-md-5 col-sm-12">
+              <div class="col-lg-6 col-md-6 col-sm-12">
                 <input
                   type="text"
                   class="form-control mb-4 "
                   placeholder="Full Name"
                 />
               </div>
-              <div class="col-lg-5 col-md-5 col-sm-12">
+              <div class="col-lg-6 col-md-6 col-sm-12">
                 <input
                   type="email"
                   id="defaultLoginFormEmail"
@@ -182,7 +199,7 @@
             </div>
 
             <div class="row">
-              <div class="col-lg-5 col-md-5 col-sm-12">
+              <div class="col-lg-6 col-md-6 col-sm-12">
                 <input
                   type="number"
                   id="defaultLoginFormNumber"
@@ -190,7 +207,7 @@
                   placeholder="Number"
                 />
               </div>
-              <div class="col-lg-5 col-md-5 col-sm-12">
+              <div class="col-lg-6 col-md-6 col-sm-12">
                 <select class="form-control mb-4" name="" id="">
                   <option value="choose"></option>
                   <option value="Tech">Techincal Writing</option>
